--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Implementing Supervised Binary Classification Using Numerical Optimizatio
 Version: 0.1.0
 Author: Authors@R: c(
     person("Yuchen", "Wang", email = "yzw0174@auburn.edu", role = c("aut","cre")),
-    person("Sarah", "Batten", role = "aut"),
+    person("Sarah", "Batten", email = "scb0122@auburn.edu" role = "aut"),
     person("FNU", "Kirti", role = "aut"),
     )
 Maintainer: Yuchen Wang <yzw0174@auburn.edu>
@@ -17,4 +17,4 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
